build_errors_8.txt
warning: unused imports: `mpsc` and `oneshot`
  --> crates/daq-core/src/core.rs:35:30
   |
35 | use tokio::sync::{broadcast, mpsc, oneshot};
   |                              ^^^^  ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: use of deprecated struct `core::DataPoint`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:754:12
    |
754 |     Scalar(DataPoint),
    |            ^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `core::DataPoint`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:754:12
    |
754 |     Scalar(DataPoint),
    |            ^^^^^^^^^

warning: use of deprecated field `core::DataPoint::timestamp`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:765:33
    |
765 |             Data::Scalar(dp) => dp.timestamp,
    |                                 ^^^^^^^^^^^^

warning: use of deprecated field `core::DataPoint::channel`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:774:34
    |
774 |             Data::Scalar(dp) => &dp.channel,
    |                                  ^^^^^^^^^^

warning: use of deprecated field `core::DataPoint::unit`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:783:34
    |
783 |             Data::Scalar(dp) => &dp.unit,
    |                                  ^^^^^^^

warning: use of deprecated field `core::DataPoint::metadata`: Use Measurement enum instead
   --> crates/daq-core/src/core.rs:792:33
    |
792 |             Data::Scalar(dp) => dp.metadata.as_ref(),
    |                                 ^^^^^^^^^^^

warning: `daq-core` (lib) generated 7 warnings (run `cargo fix --lib -p daq-core` to apply 1 suggestion)
    Checking rust_daq v0.1.0 (/Users/briansquires/code/rust-daq/crates/rust-daq)
error[E0432]: unresolved import `tonic_web_wasm_client`
  --> crates/rust-daq/src/gui/backend.rs:16:5
   |
16 | use tonic_web_wasm_client::Client as WasmClient;
   |     ^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `tonic_web_wasm_client`
   |
   = help: if you wanted to use a crate named `tonic_web_wasm_client`, use `cargo add tonic_web_wasm_client` to add it to your `Cargo.toml`

warning: unused import: `std::borrow`
  --> crates/rust-daq/src/lib.rs:41:5
   |
41 | use std::borrow;
   |     ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `async_trait::async_trait`
  --> crates/rust-daq/src/measurement/mod.rs:41:5
   |
41 | use async_trait::async_trait;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `addr`
   --> crates/rust-daq/src/gui/backend.rs:171:13
    |
171 |         let addr = if address.starts_with("http") {
    |             ^^^^ help: if this is intentional, prefix it with an underscore: `_addr`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `task`
   --> crates/rust-daq/src/gui/backend.rs:608:21
    |
608 |         if let Some(task) = self.state_stream_task.take() {
    |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_task`

warning: use of deprecated method `eframe::egui::Slider::<'a>::clamp_to_range`: Use `slider.clamping(…) instead
   --> crates/rust-daq/src/gui/widgets.rs:131:18
    |
131 |                 .clamp_to_range(true),
    |                  ^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

For more information about this error, try `rustc --explain E0432`.
warning: `rust_daq` (lib) generated 5 warnings
error: could not compile `rust_daq` (lib) due to 1 previous error; 5 warnings emitted
